AutoEvent: parse multi-line FunTime format; HUD stays visible with screens
- Rewrite parser around a sliding chat-line buffer. When a line containing
  coordinates appears, walk recent lines backwards to find the matching
  event header / bracket-name / countdown. Handles the FunTime layout
  ([Ивенты]: -> [N] Name: -> Status … X мин Y сек -> [X Y Z]) plus the
  spawn announcement format ([Name] » … Появился на координатах X Y Z).
- Filter out reserved bracket tags (Ивенты, Компас, Анархия, etc.) so
  ambient compass / status messages don't register as fake events. Only
  treat a coords line as an event when the buffer also contains an event
  header, an event-block header, or a spawn-keyword.
- Bracket-name regex now accepts Cyrillic event names directly via
  Pattern.UNICODE_CHARACTER_CLASS, so 'Вулкан', 'Сундуки', etc. parse.
- HUD render guard: skip only when our own ClickGuiScreen is open. With
  the previous 'any screen' guard, opening a chest or inventory hid the
  HUD; now the watermark, AutoEvent panel, info rows and ArrayList stay
  drawn through the inventory dimmer.
- HUD text: dynamic strings (info rows, AutoEvent name/distance/countdown,
  TargetHUD stats) now render with vanilla Text.literal instead of the
  custom-font cache. Comfortaa's Cyrillic coverage is partial and the
  per-second countdown was thrashing the LRU; both are fixed by skipping
  the styled cache for non-static text. Watermark + ArrayList module
  names still use the custom font cache.
- Auto-poll '/event delay' loosened to 60s with a 5s join-settle delay,
  and the loop only runs while the AutoEvent module is enabled and
  Auto Refresh is on; passive listening is the primary path now.

Co-Authored-By: Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>